--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=webproject
+server.port=4200
 
 # Disable Docker Compose support
 spring.docker.compose.enabled=false
@@ -12,7 +13,7 @@ spring.datasource.password=cps
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -99,8 +100,8 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # Enable schema initialization
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=embedded
 
 # Don't rely on schema locations - use the default classpath locations
 # spring.sql.init.schema-locations=classpath:schema.sql
